--- a/gr_simulation/cfg/PersonMotion.cfg
+++ b/gr_simulation/cfg/PersonMotion.cfg
@@ -15,6 +15,8 @@ motion_types = gen.enum([ gen.const("Straight",      int_t, 0, "Straight Motion"
 gen.add("mode", int_t, 0, "A size parameter which is edited via an enum", 1, 0, 3, edit_method=motion_types)
 gen.add("start_offset_x", double_t, 0, "A size parameter which is edited via an enum", 2.5, 0,4)
 gen.add("start_offset_y", double_t, 0, "A size parameter which is edited via an enum", 2.5, 0,4)
+gen.add("start_yaw", double_t, 0, "A size parameter which is edited via an enum", 0.0, -3.1415,3.1415)
+
 gen.add("distanceToMove", double_t, 0, "A size parameter which is edited via an enum", 2.5, 0,4)
 gen.add("linearvel", double_t, 0, "A size parameter which is edited via an enum", 0.0, 0.0,4.0)
 
