--- a/gr_safety/gr_safe_gridmap/config/gridmap_config.yaml
+++ b/gr_safety/gr_safe_gridmap/config/gridmap_config.yaml
@@ -1,12 +1,12 @@
 safety_threshold: 0.8
 resolution: 0.3
 mapsize: 15
-timeout: 1.00
+timeout: 0.10
 trackingtime: 6
 nprimitives: 3
 proxemicradius: 0.6
 detection_topics:
-    - /detected_objects
+    #=- /detected_objects
     #- /pointcloud_processing_node/detected_objects
     - /pointcloud_lidar_processing/found_object 
     #- /pointcloud_lidar_processing/detected_objects
