--- a/gr_safety/gr_safe_gridmap/config/gridmap_config.yaml
+++ b/gr_safety/gr_safe_gridmap/config/gridmap_config.yaml
@@ -1,14 +1,14 @@
 safety_threshold: 0.8
 resolution: 0.3
-mapsize: 15
-timeout: 0.10
+mapsize: 10
+timeout: 1.0
 trackingtime: 6
 nprimitives: 3
 proxemicradius: 0.6
 detection_topics:
-    #=- /detected_objects
+    - /found_object
     #- /pointcloud_processing_node/detected_objects
-    - /pointcloud_lidar_processing/found_object 
+    #- /pointcloud_lidar_processing/found_object 
     #- /pointcloud_lidar_processing/detected_objects
     #- /pointcloud_nodelet/found_object
     #- /fusion_manager/detected_objects
