--- a/gr_safety/gr_safe_gridmap/cfg/SafeGridMap.cfg
+++ b/gr_safety/gr_safe_gridmap/cfg/SafeGridMap.cfg
@@ -17,5 +17,15 @@ gen.add("selection",    str_t,    0, "Sensor ID",  "Select")
 gen.add("tracking", int_t, 0, "A size parameter which is edited via an enum", 5, 0,10)
 gen.add("nprimitives", int_t, 0, "A size parameter which is edited via an enum", 3, 0,9)
 gen.add("timestep", double_t, 0, "A size parameter which is edited via an enum", 0.5, 0,3)
+gen.add("primitive_0", double_t, 0, "A size parameter which is edited via an enum", 0.33, 0,1)
+gen.add("primitive_1", double_t, 0, "A size parameter which is edited via an enum", 0.33, 0,1)
+gen.add("primitive_2", double_t, 0, "A size parameter which is edited via an enum", 0.33, 0,1)
+gen.add("primitive_3", double_t, 0, "A size parameter which is edited via an enum", 0.33, 0,1)
+gen.add("primitive_4", double_t, 0, "A size parameter which is edited via an enum", 0.0, 0,1)
+gen.add("primitive_5", double_t, 0, "A size parameter which is edited via an enum", 0.0, 0,1)
+gen.add("primitive_6", double_t, 0, "A size parameter which is edited via an enum", 0.0, 0,1)
+gen.add("primitive_7", double_t, 0, "A size parameter which is edited via an enum", 0.0, 0,1)
+gen.add("primitive_8", double_t, 0, "A size parameter which is edited via an enum", 0.0, 0,1)
+
 
 exit(gen.generate(PACKAGE, PACKAGE, "SafeGridMap"))
