--- a/gr_interfaces/gr_action_msgs/package.xml
+++ b/gr_interfaces/gr_action_msgs/package.xml
@@ -1,6 +1,6 @@
 <package>
     <name>gr_action_msgs</name>
-    <version>0.0.13</version>
+    <version>0.1.0</version>
     <description>
         This package provides common interfaces for navigation actions for GR project.
     </description>
@@ -12,11 +12,15 @@
     <build_depend>actionlib_msgs</build_depend>
     <build_depend>std_msgs</build_depend>
     <build_depend>geometry_msgs</build_depend>
+    <build_depend>sensor_msgs</build_depend>
+    <build_depend>safety_msgs</build_depend>
     <build_depend>message_generation</build_depend>
 
     <run_depend>actionlib_msgs</run_depend>
     <run_depend>std_msgs</run_depend>
     <run_depend>geometry_msgs</run_depend>
+    <run_depend>sensor_msgs</run_depend>
+    <run_depend>safety_msgs</run_depend>
     <run_depend>message_runtime</run_depend>
 
 </package>
