--- a/gr_interfaces/gr_action_msgs/CMakeLists.txt
+++ b/gr_interfaces/gr_action_msgs/CMakeLists.txt
@@ -15,7 +15,7 @@ find_package(catkin REQUIRED
 add_action_files(
   DIRECTORY action
   FILES GRNavigation.action SimMotionPlanner.action 
-  	SingleRowExecution.action GrPCProcess.action
+  	SingleRowExecution.action GRPCProcess.action
 )
 
 add_service_files(
