--- a/gr_interfaces/gr_action_msgs/package.xml
+++ b/gr_interfaces/gr_action_msgs/package.xml
@@ -1,6 +1,6 @@
 <package>
     <name>gr_action_msgs</name>
-    <version>0.1.1</version>
+    <version>0.1.3</version>
     <description>
         This package provides common interfaces for navigation actions for GR project.
     </description>
@@ -14,6 +14,7 @@
     <build_depend>geometry_msgs</build_depend>
     <build_depend>sensor_msgs</build_depend>
     <build_depend>safety_msgs</build_depend>
+    <build_depend>visualization_msgs</build_depend>
     <build_depend>message_generation</build_depend>
     <build_depend>darknet_ros_msgs</build_depend>
 
@@ -22,6 +23,7 @@
     <run_depend>geometry_msgs</run_depend>
     <run_depend>sensor_msgs</run_depend>
     <run_depend>safety_msgs</run_depend>
+    <run_depend>visualization_msgs</run_depend>
     <run_depend>message_runtime</run_depend>
     <run_depend>darknet_ros_msgs</run_depend>
 
