--- a/gr_interfaces/safety_msgs/CMakeLists.txt
+++ b/gr_interfaces/safety_msgs/CMakeLists.txt
@@ -25,6 +25,7 @@ add_message_files(
    DiagnosticArray.msg
    DiagnosticStatus.msg
    KeyValue.msg
+   ExecutionMetadata.msg
 )
 
 ## Generate added messages and services with any dependencies listed here
