--- a/gr_safety/gr_safe_gridmap/config/gridmap_config.yaml
+++ b/gr_safety/gr_safe_gridmap/config/gridmap_config.yaml
@@ -1,9 +1,9 @@
 safety_threshold: 0.8
-resolution: 0.3
+resolution: 0.1
 mapsize: 15
 timeout: 0.1
-trackingtime: 5
-nprimitives: 9
+trackingtime: 10
+nprimitives: 5
 proxemicradius: 0.2
 detection_topics:
     #- /found_object
@@ -12,4 +12,4 @@ detection_topics:
     #- /pointcloud_lidar_processing/detected_objects
     #- /pointcloud_nodelet/found_object
     #- /fusion_manager/detected_objects
-pathtopic: move_base/NavfnROS/plan
+pathtopic: /move_base_flex/mpc/local_plan
