--- a/gr_safety/gr_safe_gridmap/CMakeLists.txt
+++ b/gr_safety/gr_safe_gridmap/CMakeLists.txt
@@ -31,9 +31,9 @@ find_package(catkin REQUIRED COMPONENTS
   tf2_ros
 )
 
-find_package(OpenCV 3.4 REQUIRED)
+find_package(OpenCV 3 REQUIRED)
 find_package(octomap REQUIRED)
-find_package(YAML-CPP 0.6 REQUIRED)
+find_package(YAML-CPP REQUIRED)
 
 generate_dynamic_reconfigure_options(
   cfg/SafeGridMap.cfg
@@ -43,7 +43,7 @@ catkin_package(
   INCLUDE_DIRS include
 #  LIBRARIES ${PROJECT_NAME}
   CATKIN_DEPENDS
-  DEPENDS system_lib safety_msgs 
+  DEPENDS safety_msgs 
 )
 
 ###########
