--- a/gr_safety/gr_safe_gridmap/package.xml
+++ b/gr_safety/gr_safe_gridmap/package.xml
@@ -22,12 +22,13 @@
   <depend>std_msgs</depend>
   <depend>nav_msgs</depend>
   <depend>sensor_msgs</depend>
-  <depend>safety_msgs</depend>
   <depend>cv_bridge</depend>
   <depend>octomap_msgs</depend>
   <depend>topic_tools</depend>
   <depend>tf2</depend>
   <depend>tf2_ros</depend>
+  <build_depend>safety_msgs</build_depend>
+  <run_depend>safety_msgs</run_depend>
   <build_depend>dynamic_reconfigure</build_depend>
   <exec_depend>dynamic_reconfigure</exec_depend>
   <!--build_depend>ddynamic_reconfigure</build_depend>
