--- a/gr_interfaces/safety_msgs/CMakeLists.txt
+++ b/gr_interfaces/safety_msgs/CMakeLists.txt
@@ -15,6 +15,7 @@ find_package(catkin REQUIRED COMPONENTS
 
 ## Generate messages in the 'msg' folder
 add_message_files(
+  DIRECTORY msg
    FILES
    PolicyFeedback.msg
    SafetyState.msg
@@ -31,13 +32,14 @@ add_message_files(
 ## Generate added messages and services with any dependencies listed here
 generate_messages(
    DEPENDENCIES
-   std_msgs 
+   std_msgs
    geometry_msgs
 )
 
 catkin_package(
-   CATKIN_DEPENDS 
-    std_msgs 
+   CATKIN_DEPENDS
+    std_msgs
     geometry_msgs
     message_runtime
+  INCLUDE_DIRS
 )
