--- a/gr_safety/gr_safe_gridmap/package.xml
+++ b/gr_safety/gr_safe_gridmap/package.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
-<package format="2">
+<package>
   <name>gr_safe_gridmap</name>
   <version>0.26.1</version>
   <description>Safety Gridmap based on grid_map from anybotics</description>
@@ -7,30 +7,51 @@
 
   <license>BSD</license>
   <buildtool_depend>catkin</buildtool_depend>
-  <depend>roscpp</depend>
-  <depend>angles</depend>
-  <depend>grid_map_core</depend>
-  <depend>grid_map_ros</depend>
-  <!--depend>grid_map_cv</depend-->
-  <depend>grid_map_filters</depend>
-  <depend>grid_map_loader</depend>
-  <depend>grid_map_msgs</depend>
-  <depend>grid_map_octomap</depend>
-  <depend>grid_map_rviz_plugin</depend>
-  <depend>grid_map_visualization</depend>
-  <depend>geometry_msgs</depend>
-  <depend>std_msgs</depend>
-  <depend>nav_msgs</depend>
-  <depend>sensor_msgs</depend>
-  <depend>cv_bridge</depend>
-  <depend>octomap_msgs</depend>
-  <depend>topic_tools</depend>
-  <depend>tf2</depend>
-  <depend>tf2_ros</depend>
+  <build_depend>roscpp</build_depend>
+  <build_depend>angles</build_depend>
+  <build_depend>grid_map_core</build_depend>
+  <build_depend>grid_map_ros</build_depend>
+  <build_depend>grid_map_filters</build_depend>
+  <build_depend>grid_map_loader</build_depend>
+  <build_depend>grid_map_msgs</build_depend>
+  <build_depend>grid_map_octomap</build_depend>
+  <build_depend>grid_map_rviz_plugin</build_depend>
+  <build_depend>grid_map_visualization</build_depend>
+  <build_depend>geometry_msgs</build_depend>
+  <build_depend>std_msgs</build_depend>
+  <build_depend>nav_msgs</build_depend>
+  <build_depend>sensor_msgs</build_depend>
+  <build_depend>cv_bridge</build_depend>
+  <build_depend>octomap_msgs</build_depend>
+  <build_depend>topic_tools</build_depend>
+  <build_depend>tf2</build_depend>
+  <build_depend>tf2_ros</build_depend>
   <build_depend>safety_msgs</build_depend>
-  <run_depend>safety_msgs</run_depend>
   <build_depend>dynamic_reconfigure</build_depend>
-  <exec_depend>dynamic_reconfigure</exec_depend>
+  
+
+  <run_depend>dynamic_reconfigure</run_depend>
+  <run_depend>roscpp</run_depend>
+  <run_depend>angles</run_depend>
+  <run_depend>grid_map_core</run_depend>
+  <run_depend>grid_map_ros</run_depend>
+  <run_depend>grid_map_filters</run_depend>
+  <run_depend>grid_map_loader</run_depend>
+  <run_depend>grid_map_msgs</run_depend>
+  <run_depend>grid_map_octomap</run_depend>
+  <run_depend>grid_map_rviz_plugin</run_depend>
+  <run_depend>grid_map_visualization</run_depend>
+  <run_depend>geometry_msgs</run_depend>
+  <run_depend>std_msgs</run_depend>
+  <run_depend>nav_msgs</run_depend>
+  <run_depend>sensor_msgs</run_depend>
+  <run_depend>cv_bridge</run_depend>
+  <run_depend>octomap_msgs</run_depend>
+  <run_depend>topic_tools</run_depend>
+  <run_depend>tf2</run_depend>
+  <run_depend>tf2_ros</run_depend>
+  <run_depend>safety_msgs</run_depend>
+
   <!--build_depend>ddynamic_reconfigure</build_depend>
   <exec_depend>ddynamic_reconfigure</exec_depend-->
 
