--- a/gr_safety/gr_safe_gridmap/package.xml
+++ b/gr_safety/gr_safe_gridmap/package.xml
@@ -28,7 +28,7 @@
   <depend>tf2</depend>
   <depend>tf2_ros</depend>
   <build_depend>safety_msgs</build_depend>
-  <run_depend>safety_msgs</run_depend>
+  <exec_depend>safety_msgs</exec_depend>
   <build_depend>dynamic_reconfigure</build_depend>
   <exec_depend>dynamic_reconfigure</exec_depend>
   <!--build_depend>ddynamic_reconfigure</build_depend>
