--- a/gr_safety/gr_safe_gridmap/package.xml
+++ b/gr_safety/gr_safe_gridmap/package.xml
@@ -27,6 +27,7 @@
   <build_depend>tf2</build_depend>
   <build_depend>tf2_ros</build_depend>
   <build_depend>dynamic_reconfigure</build_depend>
+  <build_depend>safety_msgs</build_depend>
   
 
   <run_depend>dynamic_reconfigure</run_depend>
