--- a/gr_safety/gr_safety_policies/CMakeLists.txt
+++ b/gr_safety/gr_safety_policies/CMakeLists.txt
@@ -18,7 +18,7 @@ find_package(catkin REQUIRED
         message_filters
 )
 
-find_package(OpenCV 3.2 REQUIRED)
+find_package(OpenCV 4 REQUIRED)
 find_package(PCL REQUIRED)
 
 #find_package(PkgConfig REQUIRED)
@@ -60,8 +60,9 @@ file(GLOB ACTIONS src/safe_actions/*.cpp)
 
 add_library(gr_safety_policies ${POLICIES} src/policies_manager.cpp)
 add_library(gr_safe_actions ${ACTIONS})
-add_executable(proximity_policy_node src/proximity_policy_node.cpp)
-add_executable(hri_policy_node src/hri_policy_node.cpp)
+add_executable(proximity_policy_node src/standalone/proximity_policy_node.cpp)
+add_executable(hri_policy_node src/standalone/hri_policy_node.cpp)
+add_executable(state_transition_policy_node src/standalone/state_transition_policy_node.cpp)
 
 add_executable(policies_manager_node src/policies_manager_node.cpp)
 add_executable(action_manager_node src/action_manager_node.cpp)
@@ -72,6 +73,7 @@ target_link_libraries(gr_safety_policies ${catkin_LIBRARIES} curl ${JSON_INCLUDE
 #Independent policies
 target_link_libraries(proximity_policy_node gr_safety_policies gr_safe_actions)
 target_link_libraries(hri_policy_node gr_safety_policies gr_safe_actions)
+target_link_libraries(state_transition_policy_node gr_safety_policies gr_safe_actions)
 
 #Policies Manager
 target_link_libraries(policies_manager_node gr_safety_policies gr_safe_actions)
@@ -81,6 +83,8 @@ target_link_libraries(action_manager_node ${catkin_LIBRARIES} ${Boost_LIBRARIES}
 add_dependencies(gr_safety_policies ${catkin_EXPORTED_TARGETS} gr_safety_policies_gencfg)
 add_dependencies(proximity_policy_node gr_safety_policies gr_safe_actions gr_safety_policies_gencfg)
 add_dependencies(hri_policy_node gr_safety_policies gr_safe_actions gr_safety_policies_gencfg)
+add_dependencies(state_transition_policy_node gr_safety_policies gr_safe_actions gr_safety_policies_gencfg)
+
 add_dependencies(policies_manager_node gr_safety_policies gr_safe_actions gr_safety_policies_gencfg)
 
 ### INSTALLS
@@ -90,6 +94,7 @@ install(TARGETS gr_safety_policies gr_safe_actions
 )
 
 install(TARGETS proximity_policy_node hri_policy_node
+                state_transition_policy_node
                 policies_manager_node action_manager_node
   RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
