--- a/gr_safety/gr_safety_policies/config/state_policy.yaml
+++ b/gr_safety/gr_safety_policies/config/state_policy.yaml
@@ -6,34 +6,33 @@ states:
   - Unknown
 
 transitions:
-  - Lethal:
-    - Unknown: stop_action
-    - Lethal: idle
-    - Danger: !stop_action
-    - Warning: human_intervention
-    - Safe: human_intervention
-  - Danger:
-    - Unknown: stop_action
-    - Lethal: stop_action
-    - Danger: idle
-    - Warning: !stop_action
-    - Safe: human_intervention
-  - Warning:
-    - Unknown: slow_action
-    - Lethal: human_intervention
-    - Danger: stop_action
-    - Warning: idle
-    - Safe: !slow_action
-  - Safe:
-    - Unknown: slow_action
-    - Lethal: human_intervetnion
-    - Danger: human_intervention
-    - Warning: slow_action
-    - Safe: idle
-  - Unknown:
-    - Unknown: idle
-    - Lethal: human_intervention
-    - Danger: stop_action
-    - Warning: !stop_action
-    - Safe: !stop_action
-
+  Lethal:
+    Unknown: stop_action
+    Lethal: idle
+    Danger: !stop_action
+    Warning: human_intervention
+    Safe: human_intervention
+  Danger:
+    Unknown: stop_action
+    Lethal: stop_action
+    Danger: idle
+    Warning: !stop_action
+    Safe: human_intervention
+  Warning:
+    Unknown: slow_action
+    Lethal: human_intervention
+    Danger: stop_action
+    Warning: idle
+    Safe: !slow_action
+  Safe:
+    Unknown: slow_action
+    Lethal: human_intervetnion
+    Danger: human_intervention
+    Warning: slow_action
+    Safe: idle
+  Unknown:
+    Unknown: idle
+    Lethal: human_intervention
+    Danger: stop_action
+    Warning: !stop_action
+    Safe: !stop_action
