--- a/gr_safety/gr_safety_policies/config/state_policy.yaml
+++ b/gr_safety/gr_safety_policies/config/state_policy.yaml
@@ -9,21 +9,21 @@ transitions:
   Lethal:
     Unknown: stop_action
     Lethal: idle
-    Danger: !stop_action
+    Danger: stop_action!
     Warning: human_intervention
     Safe: human_intervention
   Danger:
     Unknown: stop_action
     Lethal: stop_action
     Danger: idle
-    Warning: !stop_action
+    Warning: stop_action!
     Safe: human_intervention
   Warning:
     Unknown: slow_action
     Lethal: human_intervention
     Danger: stop_action
     Warning: idle
-    Safe: !slow_action
+    Safe: slow_action!
   Safe:
     Unknown: slow_action
     Lethal: human_intervetnion
@@ -34,5 +34,5 @@ transitions:
     Unknown: idle
     Lethal: human_intervention
     Danger: stop_action
-    Warning: !stop_action
-    Safe: !stop_action
+    Warning: stop_action!
+    Safe: stop_action!
