--- a/gr_safety/gr_safety_policies/CMakeLists.txt
+++ b/gr_safety/gr_safety_policies/CMakeLists.txt
@@ -14,8 +14,10 @@ find_package(catkin REQUIRED
         sensor_msgs
         geometry_msgs
         std_msgs
+        detection_msgs
 	#cv_bridge
         message_filters
+        detection_msgs
 )
 
 find_package(OpenCV 4 REQUIRED)
