--- a/gr_safety/gr_safety_policies/package.xml
+++ b/gr_safety/gr_safety_policies/package.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <package>
   <name>gr_safety_policies</name>
-  <version>0.9.7</version>
+  <version>0.9.8</version>
   <description>This packages provides safety monitors definition</description>
   <maintainer email="jose.carlos.mayoral.banos@nmbu.no">Jose Mayoral</maintainer>
   <license>MIT</license>
@@ -19,6 +19,7 @@
   <build_depend>yaml-cpp</build_depend>
   <!--build_depend>cv_bridge</build_depend-->
   <build_depend>message_filters</build_depend>
+  <build_depend>detection_msgs</build_depend>
 
   <run_depend>dynamic_reconfigure</run_depend>
   <run_depend>costmap_2d</run_depend>
@@ -32,6 +33,7 @@
   <run_depend>yaml-cpp</run_depend>
   <!--run_depend>cv_bridge</run_depend-->
   <run_depend>message_filters</run_depend>
+  <run_depend>detection_msgs</run_depend>
 
   <export>
     <safety_core plugin="${prefix}/actions_plugins.xml" />
