--- a/gr_safety/gr_safety_policies/config/state_policy.yaml
+++ b/gr_safety/gr_safety_policies/config/state_policy.yaml
@@ -1,9 +1,8 @@
 states:
-  - Lethal
-  - Danger
-  - Warning
-  - Safe
-  - Unknown
+  Lethal: "0"
+  Danger: "1"
+  Warning: "2"
+  Safe: "3"
 
 transitions:
   Lethal:
