--- a/gr_safety/gr_safety_policies/package.xml
+++ b/gr_safety/gr_safety_policies/package.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <package>
   <name>gr_safety_policies</name>
-  <version>0.11.4</version>
+  <version>0.12.0</version>
   <description>This packages provides safety monitors definition</description>
   <maintainer email="jose.carlos.mayoral.banos@nmbu.no">Jose Mayoral</maintainer>
   <license>MIT</license>
@@ -15,9 +15,9 @@
   <build_depend>sensor_msgs</build_depend>
   <build_depend>geometry_msgs</build_depend>
   <build_depend>std_msgs</build_depend>
+  <build_depend>std_srvs</build_depend>
   <build_depend>pluginlib</build_depend>
   <build_depend>yaml-cpp</build_depend>
-  <!--build_depend>cv_bridge</build_depend-->
   <build_depend>message_filters</build_depend>
   <build_depend>detection_msgs</build_depend>
 
@@ -30,8 +30,8 @@
   <run_depend>sensor_msgs</run_depend>
   <run_depend>geometry_msgs</run_depend>
   <run_depend>std_msgs</run_depend>
+  <run_depend>std_srvs</run_depend>
   <run_depend>yaml-cpp</run_depend>
-  <!--run_depend>cv_bridge</run_depend-->
   <run_depend>message_filters</run_depend>
   <run_depend>detection_msgs</run_depend>
 
