--- a/gr_safety/gr_safety_policies/config/state_policy.yaml
+++ b/gr_safety/gr_safety_policies/config/state_policy.yaml
@@ -10,7 +10,7 @@ transitions:
     Unknown: stop_action
     Lethal: idle
     Danger: stop_action!
-    Warning: human_intervention
+    Warning: slow_action!
     Safe: human_intervention
   Danger:
     Unknown: stop_action
@@ -20,7 +20,7 @@ transitions:
     Safe: human_intervention
   Warning:
     Unknown: slow_action
-    Lethal: human_intervention
+    Lethal: slow_action
     Danger: stop_action
     Warning: idle
     Safe: slow_action!
