--- a/gr_simulation/cfg/PersonMotion.cfg
+++ b/gr_simulation/cfg/PersonMotion.cfg
@@ -16,6 +16,7 @@ gen.add("mode", int_t, 0, "A size parameter which is edited via an enum", 1, 0, 
 gen.add("start_offset_x", double_t, 0, "A size parameter which is edited via an enum", 2.5, 0,20)
 gen.add("start_offset_y", double_t, 0, "A size parameter which is edited via an enum", 2.5, 0,20)
 gen.add("start_yaw", double_t, 0, "A size parameter which is edited via an enum", 0.0, -3.1415,3.1415)
+gen.add("collision_distance", double_t, 0, "A size parameter which is edited via an enum", 0.5, 0.0,3.0)
 
 gen.add("distanceToMove", double_t, 0, "A size parameter which is edited via an enum", 2.5, 0,50)
 gen.add("linearvel", double_t, 0, "A size parameter which is edited via an enum", 0.0, 0.0,4.0)
