--- a/gr_experiments/2022/config/human_config.yaml
+++ b/gr_experiments/2022/config/human_config.yaml
@@ -28,3 +28,8 @@ start_yaw:
   max_value: 0.0
   increment: 0.3926875
   default_value: 0
+collision_distance:
+  min_value: 1.2
+  max_value: 1.2
+  increment: 0.0
+  default_value: 1.0
