--- a/gr_safety/gr_safety_policies/config/state_policy.yaml
+++ b/gr_safety/gr_safety_policies/config/state_policy.yaml
@@ -8,19 +8,19 @@ states:
 transitions:
   Lethal:
     Unknown: stop_action
-    Lethal: idle
+    Lethal: stop_action
     Danger: stop_action!
     Warning: slow_action!
     Safe: human_intervention
   Danger:
     Unknown: stop_action
     Lethal: stop_action
-    Danger: idle
+    Danger: stop_action
     Warning: stop_action!
     Safe: human_intervention
   Warning:
     Unknown: slow_action
-    Lethal: slow_action
+    Lethal: stop_action
     Danger: stop_action
     Warning: idle
     Safe: slow_action!
