--- a/gr_interfaces/safety_msgs/CMakeLists.txt
+++ b/gr_interfaces/safety_msgs/CMakeLists.txt
@@ -28,6 +28,7 @@ add_message_files(
    DiagnosticStatus.msg
    KeyValue.msg
    ExecutionMetadata.msg
+   StateTransition.msg
 )
 
 ## Generate added messages and services with any dependencies listed here
